# adventOfCode2025

./: CMakeLists.txt
include/: aoc.hpp  fresh.hpp  grid.hpp  invalidCheck.hpp  joltage.hpp  safe.hpp
src/: aoc.cpp  day01.cpp  day02.cpp  day03.cpp  day04.cpp  day05.cpp  main.cpp
tests/: test_fresh.cpp  test_grid.cpp  test_invalidCheck.cpp  test_joltage.cpp  test_safe.cpp
